(US-21) @Arthurlima544 test: implement bulk transaction import TESTS